--- a/Pipfile
+++ b/Pipfile
@@ -15,6 +15,8 @@ pyjwt = "==2.8.0"
 pytz = "==2024.1"
 sqlparse = "==0.4.4"
 typing-extensions = "==4.9.0"
+channels = "*"
+daphne = "*"
 
 [dev-packages]
 
