add redis for prod environment

--- a/docker/.env
+++ b/docker/.env
@@ -2,3 +2,6 @@
 POSTGRES_USER=django_example_user
 POSTGRES_PASSWORD=django_example_password
 POSTGRES_DB=django_example
+
+#redis container configuration
+REDIS_PASSWORD=django_example_password
